5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3993/executions/1671_1100.log
== TEST (2019-04-24 15:17:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input("valor da cedula: "))
if (v == 2):
	print("Entrada:", v)
	print("Animal:","Tartaruga")
	
		
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:22:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input("valor da cedula: "))
if (v == 2):
	print("Entrada:", v)
	print("Animal:","Tartaruga")
elif ( v == 5):
	print("Entrada:", v)
	print("Animal:", "Garça")
elif (v == 10):
	print("Entrada:", v)
	print("Animal:", "Arara")
elif (v == 20 ):
	print("Entrada:", v)
	print("Entrada:", "Mico-leão-dourado")
elif (v == 50):
	print("Entrada:", v)
	print("Animal:", "Onça-pintada")
elif (v == 100):
	print("Entrada:", v)
	print("Animal:", "Garoupa")
	
		
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:23:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input("valor da cedula: "))
if (v == 2):
	print("Entrada:", v)
	print("Animal:","Tartaruga")
elif ( v == 5):
	print("Entrada:", v)
	print("Animal:", "Garça")
elif (v == 10):
	print("Entrada:", v)
	print("Animal:", "Arara")
elif (v == 20 ):
	print("Entrada:", v)
	print("Entrada:", "Mico-leão-dourado")
elif (v == 50):
	print("Entrada:", v)
	print("Animal:", "Onça-pintada")
elif (v == 100):
	print("Entrada:", v)
	print("Animal:", "Garoupa")
	
		
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:23:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input("valor da cedula: "))
if (v == 2):
	print("Entrada:", v)
	print("Animal:","Tartaruga")
elif ( v == 5):
	print("Entrada:", v)
	print("Animal:", "Garça")
elif (v == 10):
	print("Entrada:", v)
	print("Animal:", "Arara")
elif (v == 20 ):
	print("Entrada:", v)
	print("Entrada:", "Mico-leão-dourado")
elif (v == 50):
	print("Entrada:", v)
	print("Animal:", "Onça-pintada")
elif (v == 100):
	print("Entrada:", v)
	print("Animal:", "Garoupa")
	
		
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:23:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input("valor da cedula: "))
if (v == 2):
	print("Entrada:", v)
	print("Animal:","Tartaruga")
elif ( v == 5):
	print("Entrada:", v)
	print("Animal:", "Garça")
elif (v == 10):
	print("Entrada:", v)
	print("Animal:", "Arara")
elif (v == 20 ):
	print("Entrada:", v)
	print("Entrada:", "Mico-leão-dourado")
elif (v == 50):
	print("Entrada:", v)
	print("Animal:", "Onça-pintada")
elif (v == 100):
	print("Entrada:", v)
	print("Animal:", "Garoupa")
	
		
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:24:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input("valor da cedula: "))
if (v == 2):
	print("Entrada:", v)
	print("Animal:","Tartaruga")
elif ( v == 5):
	print("Entrada:", v)
	print("Animal:", "Garca")
elif (v == 10):
	print("Entrada:", v)
	print("Animal:", "Arara")
elif (v == 20 ):
	print("Entrada:", v)
	print("Entrada:", "Mico-leao-dourado")
elif (v == 50):
	print("Entrada:", v)
	print("Animal:", "Onca-pintada")
elif (v == 100):
	print("Entrada:", v)
	print("Animal:", "Garoupa")
	
		
-- EXECUTION TIME:
0.144571
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:

-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
valor da cedula: Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:24:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input("valor da cedula: "))
if (v == 2):
	print("Entrada:", v)
	print("Animal:","Tartaruga")
elif ( v == 5):
	print("Entrada:", v)
	print("Animal:", "Garca")
elif (v == 10):
	print("Entrada:", v)
	print("Animal:", "Arara")
elif (v == 20 ):
	print("Entrada:", v)
	print("Entrada:", "Mico-leao-dourado")
elif (v == 50):
	print("Entrada:", v)
	print("Animal:", "Onca-pintada")
elif (v == 100):
	print("Entrada:", v)
	print("Animal:", "Garoupa")
	
		
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:25:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input("valor da cedula: "))
if (v == 2):
	print("Entrada:", v)
	print("Animal:","Tartaruga")
elif ( v == 5):
	print("Entrada:", v)
	print("Animal:", "Garca")
elif (v == 10):
	print("Entrada:", v)
	print("Animal:", "Arara")
elif (v == 20 ):
	print("Entrada:", v)
	print("Entrada:", "Mico-leao-dourado")
elif (v == 50):
	print("Entrada:", v)
	print("Animal:", "Onca-pintada")
elif (v == 100):
	print("Entrada:", v)
	print("Animal:", "Garoupa")
else:
	print("Entrada::", v)
	print("Animal:", "Invalido")
		p
	
		
-- ERROR:
File "XXXX", line 26
    p
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:25:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input("valor da cedula: "))
if (v == 2):
	print("Entrada:", v)
	print("Animal:","Tartaruga")
elif ( v == 5):
	print("Entrada:", v)
	print("Animal:", "Garca")
elif (v == 10):
	print("Entrada:", v)
	print("Animal:", "Arara")
elif (v == 20 ):
	print("Entrada:", v)
	print("Entrada:", "Mico-leao-dourado")
elif (v == 50):
	print("Entrada:", v)
	print("Animal:", "Onca-pintada")
elif (v == 100):
	print("Entrada:", v)
	print("Animal:", "Garoupa")
else:
	print("Entrada::", v)
	print("Animal:", "Invalido")
		
	
		
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:25:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input("valor da cedula: "))
if (v == 2):
	print("Entrada:", v)
	print("Animal:","Tartaruga")
elif ( v == 5):
	print("Entrada:", v)
	print("Animal:", "Garca")
elif (v == 10):
	print("Entrada:", v)
	print("Animal:", "Arara")
elif (v == 20 ):
	print("Entrada:", v)
	print("Entrada:", "Mico-leao-dourado")
elif (v == 50):
	print("Entrada:", v)
	print("Animal:", "Onca-pintada")
elif (v == 100):
	print("Entrada:", v)
	print("Animal:", "Garoupa")
else:
	print("Entrada::", v)
	print("Animal:", "Invalido")
		
	
		
-- EXECUTION TIME:
0.122327
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:25:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input("valor da cedula: "))
if (v == 2):
	print("Entrada:", v)
	print("Animal:","Tartaruga")
elif ( v == 5):
	print("Entrada:", v)
	print("Animal:", "Garca")
elif (v == 10):
	print("Entrada:", v)
	print("Animal:", "Arara")
elif (v == 20 ):
	print("Entrada:", v)
	print("Entrada:", "Mico-leao-dourado")
elif (v == 50):
	print("Entrada:", v)
	print("Animal:", "Onca-pintada")
elif (v == 100):
	print("Entrada:", v)
	print("Animal:", "Garoupa")
else:
	print("Entrada:", v)
	print("Animal:", "Invalido")
		
	
		
-- EXECUTION TIME:
0.14655
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
